// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropList matches default snapshot 1`] = `
<section>
  <h3 class="title">
    <span>
      TITLE
    </span>
    &nbsp;
  </h3>
  <yzdt-prop uid="_0"
             key="name"
  >
  </yzdt-prop>
  <yzdt-prop uid="_0"
             key="surname"
  >
  </yzdt-prop>
</section>
`;

exports[`PropList matches empty snapshot 1`] = `
<section>
  <h3 class="title">
    <span>
      TITLE
    </span>
    &nbsp;
  </h3>
  <p class="empty">
    empty object
  </p>
</section>
`;

exports[`PropList matches watchable snapshot 1`] = `
<section>
  <h3 class="title">
    <span>
      WATCHABLE LIST
    </span>
    &nbsp;
    <yzdt-watcher key="*"
                  uid="_0"
    >
    </yzdt-watcher>
  </h3>
  <yzdt-prop uid="_0"
             key="name"
             watchable
             watched
  >
  </yzdt-prop>
  <yzdt-prop uid="_0"
             key="surname"
             watchable
  >
  </yzdt-prop>
</section>
`;
